--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css" media="all">
 </head>
 <body>
@@ -16,12 +18,18 @@
             <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
             <form action="cadastro.php" method="post" autocomplete="on">
                 <p>
+                    <span class="material-symbols-outlined">
+                        alternate_email
+                    </span>
                     <label for="iemail"></label>
-                    <input type="email" name="email" id="iemail" required placeholder="email do usuário" autocomplete="email">
+                    <input class="email-sen" type="email" name="email" id="iemail" required placeholder="email do usuário" autocomplete="email">
                 </p>
                 <p>
+                    <span class="material-symbols-outlined">
+                        key
+                    </span>
                     <label for="isen"></label>
-                    <input type="password" name="sen" id="isen" required minlength="8" maxlength="12" placeholder="sua senha" autocomplete="current-password">
+                    <input class="email-sen" type="password" name="sen" id="isen" required minlength="8" maxlength="12" placeholder="sua senha" autocomplete="current-password">
                 </p>
                 <input class="bloco" type="submit" value="Entrar">
                 <a class="bloco" href="#">Esqueci a senha</a>
